# website_llct

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  README.md  SHADCN_REPLACEMENT_GUIDE.md  SUPABASE_MIGRATION_GUIDE.md  render.yaml
.cursor/plans/: implement-dark-mode-sync-2d37a789.plan.md
ai-server/: Dockerfile  Dockerfile.cloudrun  README.md  env.example  pyproject.toml  requirements.txt
ai-server/app/: __init__.py  main.py
ai-server/app/api/api_v1/: api.py
ai-server/app/api/api_v1/endpoints/: __init__.py  chat.py  file_upload.py
ai-server/app/core/: __init__.py  config.py  database.py
ai-server/app/middleware/: auth.py
ai-server/app/services/: __init__.py  file_search_service.py  gemini_client.py  rag_service.py  upstash_redis.py
ai-server/scripts/: deploy.sh  manage_file_search_store.py  run_local.sh
client/: ENV_SETUP.md  next.config.ts  package.json  tailwind.config.js
client/public/: site.webmanifest
client/scripts/: add-dynamic-export.js  fix-prerender.sh  replace-protected-route.js  switch-env.js
docs/: SUPABASE_CONNECTIONS.md
scripts/: test-local.sh
server/: Dockerfile  Dockerfile.render  README.md  TEST_REGISTER.md  env.example  main.py  pyproject.toml  render.yaml  requirements.txt  run_server.sh  start.sh  sync_requirements.sh
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  10b30c34a65e_remove_unused_test_results_tables.py  2c8b5a856d61_cleanup_notification_roles.py  2cc3b7f55a44_initial_migration.py  362e2624da3e_create_gemini_files_table.py  3792c5fbaa9a_add_chapter_lesson_number_title_fields.py  37bd79f86523_update_user.py  54531527be7c_.py  5d5bcf2940e5_convert_document_enums_to_lowercase.py  6d6d5c8b9e92_drop_user_role_assignments.py  945f583f7280_enable_rls_and_policies.py  a1b2c3d4e5f6_add_material_type_to_materials.py  a465c2236221_remove_unused_item_bank_table.py  a66c1590028d_remove_keywords_from_library_documents.py  add_assessment_rating_and_review_fields.py  add_content_html_and_rating_sum_to_library_documents.py  add_content_html_to_materials.py  add_content_html_to_products.py  add_is_quick_test_to_assessment_results.py  add_question_extended_fields.py  add_textbook_to_documenttype_enum.py  add_thumbnail_url_to_products.py  b4722af36f1f_setup_notifications_table_rls.py  b6595fabf2d2_add_news_products_library_test_results_.py  c3d4e5f6g7h8_add_email_verified_to_users.py  c5c7d9df5f34_drop_legacy_articles_table.py  d075be53c8ed_migrate_subjects_to_library_subjects.py  d4e5f6g7h8i9_create_notifications_table.py  d9a3f4a9a8b7_drop_legacy_classes_and_projects.py  e2b4b4f9bf2c_lowercase_notificationtype_enum.py  e5f6g7h8i9j0_add_file_name_and_file_type_to_library_documents.py  f2c59b1ee092_remove_lesson_fields_from_library_add_.py  f6g7h8i9j0k1_add_missing_columns_to_library_subjects.py
server/app/: main.py
server/app/ai/: gemini_client.py
server/app/api/api_v1/: api.py
server/app/api/api_v1/endpoints/: admin.py  ai_files.py  assessment_results.py  assessments.py  auth.py  chat.py  courses.py  embeddings.py  lectures.py  library.py  news.py  notifications.py  products.py  rag_chat.py  test_results.py  users.py
server/app/core/: config.py  database.py  security.py  supabase_client.py
server/app/middleware/: auth.py  rate_limiter.py
server/app/models/: __init__.py  assessment.py  assessment_rating.py  assessment_result.py  chat.py  content.py  course.py  gemini_file.py  library.py  news.py  notification.py  organization.py  product.py  rag.py  test_result.py  user.py
server/app/schemas/: admin.py  assessment.py  assessment_rating.py  assessment_result.py  chat.py  course.py  library.py  news.py  notification.py  product.py  test_result.py  user.py
server/app/services/: embeddings_service.py  notification_service.py  rag_service.py
server/app/utils/: auth_metadata.py
server/app/workers/: indexing_worker.py
server/scripts/: deploy.sh  kill_port.sh  run_local.sh  set_admin.py
server/sql/: add_content_html_to_products.sql  add_thumbnail_url_to_products.sql  create_lectures_bucket_policies.sql
(+161 files in other folders)
