[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.4",
    "google-genai>=1.49.0",
    "passlib>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    # NOTE: redis and upstash-redis removed - server/ does not use Redis
    # redis>=7.0.1,  # Not used by server/ (Render)
    # upstash-redis>=1.5.0,  # Only used by ai-server/ (Cloud Run) - see ai-server/requirements.txt
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    # NOTE: aiofiles, dotenv, and supabase removed - not used in codebase
    # aiofiles>=25.1.0,  # Not used in codebase
    # dotenv>=0.9.9,  # Not used (python-dotenv is used via pydantic-settings)
    # supabase>=2.23.3,  # Not used (only config, no package import)
    "gunicorn>=23.0.0",
    # Fix yanked email-validator==2.1.0
    "email-validator>=2.1.0.post1",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "starlette>=0.49.3",
    "huggingface-hub>=0.36.0",
]
